--- a/styles/generic.css
+++ b/styles/generic.css
@@ -202,7 +202,7 @@
 
 /* HEADER MODULE */
 
-#MDL_header div{
+#MDL_hdr div{
   position: relative;
   background-color: var(--gradients_primary_1_fallback);
   background-image: var(--gradients_primary_1);
@@ -210,42 +210,42 @@
   z-index: 2;
 }
 
-#MDL_header a {
+#MDL_hdr a {
   float: left;
   transition: transform var(--transition_delay_3);
 }
 
-#MDL_header a:hover {
+#MDL_hdr a:hover {
   transform: rotate(360deg);
 }
 
-#MDL_header h1 {
+#MDL_hdr h1 {
   display: inline-block;
   font-family: var(--font_2);
   font-weight: 400;
   color: var(--colors_tertiary_250);
 }
 
-#MDL_header button {
+#MDL_hdr button {
   background-image: url(../images/icons/menu_lightgray.svg);
   background-color: transparent;
   float: right;
 }
 
-#MDL_header button:hover {
+#MDL_hdr button:hover {
   cursor: pointer;
   background-image: url(../images/icons/menu_darkgray.svg);
 }
 
-#MDL_header #mobileMenuButton {
+#MDL_hdr #mobileMenuButton {
   visibility: hidden;
 }
 
-#MDL_header_topNavBar {
+#MDL_hdr_topNavBar {
   visibility: hidden; 
 }
 
-#MDL_header #MDL_header_mobileNavMenu {
+#MDL_hdr #MDL_hdr_mobileNavMenu {
   visibility: hidden;
   position: fixed;
   top: 0;
@@ -256,7 +256,7 @@
   z-index: 3;
 }
 
-#MDL_header #MDL_header_mobileNavMenu.open {
+#MDL_hdr #MDL_hdr_mobileNavMenu.open {
   visibility: visible;
 }
 
@@ -280,16 +280,16 @@
   /* ███████████████████████████████ */
 
   :root {
-    /* HEADER MODULE */
+    /* HEADER MODULE (MDL_HDR) */
     /* How tall the header is at least */
-    --MDL_header_height: 64px;
+    --MDL_hdr_height: 64px;
 
     /* Internal padding between items inside the header */
-    --MDL_header_padding: 8px;
+    --MDL_hdr_padding: 8px;
 
     /* How large the titles font is
       tfs = Title Font Size */
-    --MDL_header_tfs: 24px;
+    --MDL_hdr_tfs: 24px;
   }
 
 
@@ -301,10 +301,10 @@
   /* ██████████████████████████████████ */
 
   :root {
-    /* HEADER MODULE */
+    /* HEADER MODULE (MDR_HDR) */
     /* How tall the content of the header is
       hmp = Height Minus Padding */
-    --MDL_header_hmp: calc(var(--MDL_header_height) - 2 * var(--MDL_header_padding));
+    --MDL_hdr_hmp: calc(var(--MDL_hdr_height) - 2 * var(--MDL_hdr_padding));
   }
 
 
@@ -315,39 +315,39 @@
   /* █ RESPONSIVE (TINY) RULESETS █ */
   /* ██████████████████████████████ */
 
-  /* HEADER MODULE */
-  #MDL_header a {
-    height: var(--MDL_header_hmp);
-    min-height: var(--MDL_header_hmp);
-    width: var(--MDL_header_hmp);
-    margin: var(--MDL_header_padding);
+  /* HEADER MODULE (MDL_HDR) */
+  #MDL_hdr a {
+    height: var(--MDL_hdr_hmp);
+    min-height: var(--MDL_hdr_hmp);
+    width: var(--MDL_hdr_hmp);
+    margin: var(--MDL_hdr_padding);
   }
 
-  #MDL_header img {
-    height: var(--MDL_header_hmp);
-    min-height: var(--MDL_header_hmp);
+  #MDL_hdr img {
+    height: var(--MDL_hdr_hmp);
+    min-height: var(--MDL_hdr_hmp);
   }
 
-  #MDL_header h1 {
-    height: var(--MDL_header_hmp);
-    min-height: var(--MDL_header_hmp);
-    margin: var(--MDL_header_padding);
-    line-height: var(--MDL_header_hmp);
-    font-size: var(--MDL_header_tfs);
+  #MDL_hdr h1 {
+    height: var(--MDL_hdr_hmp);
+    min-height: var(--MDL_hdr_hmp);
+    margin: var(--MDL_hdr_padding);
+    line-height: var(--MDL_hdr_hmp);
+    font-size: var(--MDL_hdr_tfs);
   }
 
-  #MDL_header button {
-    height: var(--MDL_header_hmp);
-    min-height: var(--MDL_header_hmp);
-    width: var(--MDL_header_hmp);
-    margin: var(--MDL_header_padding);
+  #MDL_hdr button {
+    height: var(--MDL_hdr_hmp);
+    min-height: var(--MDL_hdr_hmp);
+    width: var(--MDL_hdr_hmp);
+    margin: var(--MDL_hdr_padding);
   }
 
-  #MDL_header #topNavBar {
+  #MDL_hdr #topNavBar {
     visibility: hidden;
   }
 
-  #MDL_header #mobileMenuButton {
+  #MDL_hdr #mobileMenuButton {
     visibility: visible;
   }
 }
